--- a/public/stylesheets/components/serviceCard.scss
+++ b/public/stylesheets/components/serviceCard.scss
@@ -94,6 +94,7 @@
     .group-service{
         .card-service{
             width: 100%;
+            border: none;
             .service{
                 font-size: 1.2rem;
             }
